--- a/package.json
+++ b/package.json
@@ -1,34 +1,15 @@
 {
-  "dependencies": {
-    "@getbrevo/brevo": "^2.0.0-beta.4",
-    "@sendgrid/mail": "^8.1.1",
-    "aws-sdk": "^2.1564.0",
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.4",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.9.1",
-    "nodemon": "^3.1.0",
-    "razorpay": "^2.9.2",
-    "sequelize": "^6.36.0",
-    "sib-api-v3-sdk": "^8.5.0",
-    "uuid": "^9.0.1"
-  },
-  "name": "expense-big-project",
+  "name": "expense_tracker",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "anjali",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@getbrevo/brevo": "^2.0.0-beta.4",
+    "express": "^4.18.2"
+  }
 }
